--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -102,7 +102,7 @@
         <div class="pull-right hidden-xs">
             <b>版本</b> 1.0
         </div>
-        <strong>版权 &copy; 2019-2020 归<a href="http://www.sduept.com"></a>山东山大电力技术股份有限公司</strong> 所有
+        <strong>版权 &copy; 2019-2020 归<a href=" "></a>aa</strong> 所有
     </footer>
     <div class="control-sidebar-bg"></div>
 </div>
