--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -89,7 +89,7 @@
         <div class="row">
             <div class="col-md-12">
                 <p>
-                    <strong>版权 &copy; 2019-2020 归<a href="http://www.sduept.com"></a>山东山大电力技术股份有限公司</strong> 所有
+                    <strong>版权 &copy; 2019-2020 归<a href=""></a>aa</strong> 所有
                 </p>
             </div>
         </div>
